kustomize/instances/bookinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    istio-discovery: default
    istio.io/rev: default
